added substitution of nodes
